--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- SEO: Meta Title e Description ottimizzati per il noleggio B2B/B2C -->
-    <title>Noleggio Piante per Eventi e Uffici | Eleva i Tuoi Spazi in Modo Sostenibile</title>
+    <title>Noleggio Piante per eventi e uffici | Eleva i tuoi spazi in modo sostenibile</title>
     <meta name="description"
         content="Noleggio di piante a breve e lungo termine per uffici, eventi e allestimenti. Soluzioni green flessibili, economiche e senza l'impegno della cura. Richiedi un preventivo gratuito!">
     <meta name="keywords"
@@ -76,17 +76,17 @@
             <div class="container mx-auto px-6 lg:px-8">
                 <!-- Logica Tecnica: Tag H1 per il SEO e layout fluido -->
                 <h1 class="text-4xl sm:text-5xl lg:text-6xl font-extrabold text-secondary-dark mb-4 leading-tight">
-                    Trasforma il Tuo Spazio. <span class="text-primary-green">Noleggia le Piante Perfette</span>.
+                    Trasforma il tuo spazio. <span class="text-primary-green">Noleggia le piante perfette</span>
                 </h1>
                 <p class="text-xl sm:text-2xl text-gray-600 mb-8 max-w-3xl">
-                    La soluzione **flessibile e sostenibile** per eventi, uffici e set fotografici. Eleganza verde senza
+                    La soluzione flessibile e sostenibile per eventi, uffici e set fotografici. Eleganza verde senza
                     costi fissi o impegni di manutenzione.
                 </p>
 
                 <!-- CTA Iniziale (Visibilità Immediata) -->
                 <a href="#contact-form"
                     class="inline-block px-10 py-4 bg-accent-yellow text-secondary-dark font-bold text-lg rounded-xl hover:bg-yellow-400 transition duration-300 shadow-xl transform hover:scale-105">
-                    Richiedi il Tuo Preventivo Gratuito
+                    Richiedi il tuo preventivo gratuito
                 </a>
 
                 <!-- Spazio per Immagine Hero -->
@@ -103,7 +103,7 @@
         <section class="py-16 md:py-24 px-6 lg:px-8">
             <!-- Logica Tecnica: H2 per il SEO, uso di Grid per il responsive design -->
             <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12 text-secondary-dark" id="vantaggi">
-                Perché il Noleggio Piante è la Tua Scelta Green Intelligente
+                Perché il noleggio piante è la tua scelta Green intelligente
             </h2>
 
             <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
@@ -119,9 +119,9 @@
                             </path>
                         </svg>
                     </div>
-                    <h3 class="text-xl font-bold mb-3 text-secondary-dark">Massima Flessibilità di Tempo</h3>
+                    <h3 class="text-xl font-bold mb-3 text-secondary-dark">Massima flessibilità di tempo</h3>
                     <p class="text-gray-600">Noleggia per un singolo evento (un giorno) o un allestimento aziendale a
-                        lungo termine (mesi). **Nessun impegno a vita.** Cambi idea? Cambi pianta! È la soluzione ideale
+                        lungo termine (mesi). Nessun impegno a vita. Cambi idea? Cambi pianta! È la soluzione ideale
                         per chi cerca un allestimento dinamico e sempre fresco, superando il problema della "breve
                         durata" dei fiori recisi.</p>
                 </div>
@@ -137,11 +137,11 @@
                             </path>
                         </svg>
                     </div>
-                    <h3 class="text-xl font-bold mb-3 text-secondary-dark">Costi Contenuti e Zero Manutenzione</h3>
+                    <h3 class="text-xl font-bold mb-3 text-secondary-dark">Costi contenuti e ZERO manutenzione</h3>
                     <p class="text-gray-600">Evita l'investimento iniziale e i costi di sostituzione. Il noleggio è una
                         spesa operativa chiara. Ci occupiamo noi del trasporto, dell'allestimento e della manutenzione
-                        (o sostituzione) se necessario, garantendoti un look perfetto **senza sforzo né costi
-                        nascosti.**</p>
+                        (o sostituzione) se necessario, garantendoti un look perfetto senza sforzo né costi
+                        nascosti.</p>
                 </div>
 
                 <!-- Vantaggio 3: Sostenibilità (Appello ai valori Millennial) -->
@@ -155,11 +155,11 @@
                             </path>
                         </svg>
                     </div>
-                    <h3 class="text-xl font-bold mb-3 text-secondary-dark">Impatto Ambientale Ridotto</h3>
+                    <h3 class="text-xl font-bold mb-3 text-secondary-dark">Impatto ambientale ridotto</h3>
                     <p class="text-gray-600">Scegliere il noleggio supporta l'economia circolare. Le piante ritornano ai
                         nostri fioristi partner per essere ricondizionate o riutilizzate, riducendo gli sprechi e
-                        l'impronta di carbonio associata alla logistica dei prodotti "usa e getta". **Azienda Green,
-                        Immagine Green.**</p>
+                        l'impronta di carbonio associata alla logistica dei prodotti "usa e getta". Azienda Green,
+                        Immagine Green.</p>
                 </div>
             </div>
         </section>
@@ -168,7 +168,7 @@
         <section class="py-16 md:py-24 px-6 lg:px-8 bg-white rounded-3xl shadow-lg">
             <!-- Logica Tecnica: Uso di un layout a due colonne (flessibile/immagine) -->
             <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12 text-secondary-dark" id="catalogo">
-                Come Funziona: Il Nostro Processo Semplice
+                Come funziona: il nostro processo semplice
             </h2>
 
             <div class="flex flex-col lg:flex-row items-center justify-between gap-12">
@@ -178,9 +178,9 @@
                         <span
                             class="text-2xl font-extrabold bg-primary-green text-white rounded-full h-10 w-10 flex items-center justify-center mr-4 flex-shrink-0">1</span>
                         <div>
-                            <h3 class="text-xl font-bold text-secondary-dark mb-1">Esplora il Catalogo e Richiedi</h3>
+                            <h3 class="text-xl font-bold text-secondary-dark mb-1">Esplora il catalogo e richiedi</h3>
                             <p class="text-gray-600">Sfoglia le nostre varietà. Scegli le piante ideali per il tuo
-                                spazio (interni, esterni, grandi dimensioni). **Compila il form** qui sotto indicando le
+                                spazio (interni, esterni, grandi dimensioni). Compila il form qui sotto indicando le
                                 tue preferenze.</p>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                         <span
                             class="text-2xl font-extrabold bg-primary-green text-white rounded-full h-10 w-10 flex items-center justify-center mr-4 flex-shrink-0">2</span>
                         <div>
-                            <h3 class="text-xl font-bold text-secondary-dark mb-1">Allestimento e Consegna</h3>
+                            <h3 class="text-xl font-bold text-secondary-dark mb-1">Allestimento e consegna</h3>
                             <p class="text-gray-600">Il nostro fiorista partner locale si occuperà della consegna
                                 puntuale, dell'allestimento professionale e, se richiesto, dei vasi decorativi.</p>
                         </div>
@@ -199,10 +199,10 @@
                         <span
                             class="text-2xl font-extrabold bg-primary-green text-white rounded-full h-10 w-10 flex items-center justify-center mr-4 flex-shrink-0">3</span>
                         <div>
-                            <h3 class="text-xl font-bold text-secondary-dark mb-1">Ritiro o Sostituzione</h3>
+                            <h3 class="text-xl font-bold text-secondary-dark mb-1">Ritiro o sostituzione</h3>
                             <p class="text-gray-600">Alla fine del periodo concordato, ritiriamo noi le piante o le
-                                sostituiamo con nuove varietà, mantendendo il tuo spazio sempre vitale. **Facile e
-                                trasparente.**</p>
+                                sostituiamo con nuove varietà, mantendendo il tuo spazio sempre vitale. Facile e
+                                trasparente.</p>
                         </div>
                     </div>
 
@@ -227,7 +227,7 @@
         <section class="py-16 md:py-24 px-6 lg:px-8">
             <!-- Logica Tecnica: Tag H2 per il SEO, citazioni accessibili con `blockquote` -->
             <h2 class="text-3xl sm:text-4xl font-bold text-center mb-12 text-secondary-dark" id="recensioni">
-                Dicono di Noi: L'Esperienza Green dei nostri clienti
+                Dicono di noi: L'Esperienza Green dei nostri clienti
             </h2>
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -237,7 +237,7 @@
                         qualcosa di impatto ma sostenibile. Il servizio è stato impeccabile: consegna puntuale, piante
                         stupende e un team di fioristi davvero professionale. Niente più stress per la manutenzione!
                         Consigliatissimo."</p>
-                    <footer class="font-semibold text-sm text-secondary-dark">— Laura S., Responsabile Marketing Eventi
+                    <footer class="font-semibold text-sm text-secondary-dark">— Laura Saveri, Responsabile Marketing Eventi
                     </footer>
                 </blockquote>
 
@@ -246,7 +246,7 @@
                         noleggio a lungo termine per il nostro ufficio, abbiamo un ambiente più salubre e bello, ma il
                         costo è infinitamente più gestibile che comprare. La possibilità di cambiare le piante
                         stagionalmente è un enorme plus!"</p>
-                    <footer class="font-semibold text-sm text-secondary-dark">— Marco T., Titolare di Coworking Space
+                    <footer class="font-semibold text-sm text-secondary-dark">— Marco Timpaso, Titolare di Coworking Space
                     </footer>
                 </blockquote>
             </div>
