--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
                     <!-- Campo GetResponse AGGIUNTO: URL di Reindirizzamento in caso di successo -->
                     <input type="hidden" name="thankyou_url"
-                        value="http://127.0.0.1:5500/thankyou.html" />
+                        value="https://alessandro-villarosa.github.io/landing-page-noleggio-piante/thankyou" />
                     <!-- Nota: Ho usato un placeholder di dominio, assicurati di usare l'URL ESATTO della tua landing page! -->
 
                     <!-- Campo GetResponse FACOLTATIVO: URL in caso di errore (opzionale, ma utile) -->
@@ -325,7 +325,7 @@
                         </select>
                     </div>
 
-                    <button type="submit" href="thankyou.html" 
+                    <button type="submit"
                         class="w-full px-4 py-3 bg-accent-yellow text-secondary-dark font-bold text-lg rounded-lg hover:bg-yellow-400 transition duration-300 shadow-md">
                         Invia la tua richiesta ora
                     </button>
