--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
                         qualcosa di impatto ma sostenibile. Il servizio è stato impeccabile: consegna puntuale, piante
                         stupende e un team di fioristi davvero professionale. Niente più stress per la manutenzione!
                         Consigliatissimo."</p>
-                    <footer class="font-semibold text-sm text-secondary-dark">— Laura Saveri, Responsabile Marketing Eventi
+                    <footer class="font-semibold text-sm text-secondary-dark">— Laura Saveri, Responsabile Marketing
+                        Eventi
                     </footer>
                 </blockquote>
 
@@ -246,11 +247,22 @@
                         noleggio a lungo termine per il nostro ufficio, abbiamo un ambiente più salubre e bello, ma il
                         costo è infinitamente più gestibile che comprare. La possibilità di cambiare le piante
                         stagionalmente è un enorme plus!"</p>
-                    <footer class="font-semibold text-sm text-secondary-dark">— Marco Timpaso, Titolare di Coworking Space
+                    <footer class="font-semibold text-sm text-secondary-dark">— Marco Timpaso, Titolare di Coworking
+                        Space
                     </footer>
                 </blockquote>
             </div>
         </section>
+
+
+        <link href="https://cdn.jsdelivr.net/npm/@n8n/chat/dist/style.css" rel="stylesheet" />
+        <script type="module">
+            import { createChat } from 'https://cdn.jsdelivr.net/npm/@n8n/chat/dist/chat.bundle.es.js';
+
+            createChat({
+                webhookUrl: 'http://localhost:5678/webhook/21c610de-8d1c-41f3-81f1-6b84987acc36/chat'
+            });
+        </script>
 
         <!-- Call to Action (CTA) Finale e Form di Contatto -->
         <section class="py-16 md:py-24 px-6 lg:px-8 bg-primary-green rounded-t-3xl text-white">
@@ -287,7 +299,8 @@
                     <!-- Nota: Ho usato un placeholder di dominio, assicurati di usare l'URL ESATTO della tua landing page! -->
 
                     <!-- Campo GetResponse FACOLTATIVO: URL in caso di errore (opzionale, ma utile) -->
-                    <input type="hidden" name="failure_url" value="https://noleggiopiante.github.io/index.html?error=true#contact-form" />
+                    <input type="hidden" name="failure_url"
+                        value="https://noleggiopiante.github.io/index.html?error=true#contact-form" />
 
                     <div>
                         <label for="name" class="block text-sm font-medium text-gray-700 mb-1">Nome e Cognome / Nome
@@ -308,7 +321,8 @@
                     </div>
 
                     <div>
-                        <label name= "custom_selezione" for="custom_selezione" class="block text-sm font-medium text-gray-700 mb-1">Piante di tuo
+                        <label name="custom_selezione" for="custom_selezione"
+                            class="block text-sm font-medium text-gray-700 mb-1">Piante di tuo
                             interesse</label>
                         <!-- GetResponse: Campo personalizzato. Assicurati che 'piante_di_tuo_interesse' sia l'ID esatto del campo personalizzato su GetResponse! -->
                         <select id="custom_selezione" name="custom_selezione"
